docs/content/v2.8/yugabyte-platform/upgrade/upgrade-yp-replicated.md
---
title: Upgrade Yugabyte Platform using Replicated
headerTitle: Upgrade Yugabyte Platform using Replicated
linkTitle: Upgrade using Replicated
description: Use Replicated to upgrade Yugabyte Platform
menu:
  v2.8:
    identifier: upgrade-yp-replicated
    parent: upgrade
    weight: 80
isTocNested: true
showAsideToc: true
---

You can use [Replicated](https://www.replicated.com/) to upgrade your Yugabyte Platform to a newer version.

To start the upgrade, you need to login to the Replicated Admin Console via https://:8800 and then perform the following:

- Navigate to **Dashboard** and click **View release history** to open **Release History**, as shown in the following illustration.<br><br>
  ![image](/images/yb-platform/upgrade-replicated1.png) 



<br>

- Find the required release version and click the corresponding **Install**.

  If the required version is not in the list, click **Check for updates** to refresh of a list of releases available in the channel to which you are subscribed, and then click **Install** corresponding to the release.

  It is possible that the required release version is in a different channel (for example, you want to upgrade from 2.4.*n* release family to 2.6.*n*). In this case, you start by updating the channel, as follows:
  - Click the gear icon and select **View License**, as per the following illustration.<br>

    ![image](/images/yb-platform/upgrade-replicated2.png)

  - In the **License** view, click **change** for **Release Channel**, as per the following illustration.<br>

    ![image](/images/yb-platform/upgrade-replicated3.png)

    <br><br>Note that if you do not have permissions to access the new release channel, you should contact Yugabyte Support.

  - Click **Sync License**. 

  - Navigate back to **Release History**, locate the release you need, and then click the corresponding **Install**.